syntax = "proto3";

package common;
option go_package = "protobuf/common";

message HeartBeat {
    string message = 1;
}