syntax = "proto3";

package common;
option go_package = "protobuf/proto/common";

message MessageResponse {
    string message = 1;
}